versioned_docs/version-2.15/reference/goals/fix.mdx
---
title: fix
description: |
  Autofix source code.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

```
pants fix [args]
```

Autofix source code.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[fix]`</span>

<span className={styles.options}>

## Basic options

### `only`

<Option
  cli_repr={`--fix-only="['<str>', '<str>', ...]"`}
  env_repr='PANTS_FIX_ONLY'
  toml_repr={`[fix]
only = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Only run these fixers and skip all others.

The fixer names are outputted at the final summary of running this goal, e.g. `autoflake` and `pyupgrade`. You can also run `fix --only=fake` to get a list of all activated fixers.

You can repeat this option, e.g. `fix --only=autoflake --only=pyupgrade` or `fix --only=['autoflake', 'pyupgrade']`.

</Option>

### `skip_formatters`

<Option
  cli_repr={`--[no-]fix-skip-formatters`}
  env_repr='PANTS_FIX_SKIP_FORMATTERS'
  toml_repr={`[fix]
skip_formatters = <bool>`}
  default_repr={`False`}
>

If true, skip running all formatters.

FYI: when running `/home/josh/work/scie-pants/dist/pants fix fmt ::`, there should be diminishing performance benefit to using this flag. Pants attempts to reuse the results from `fmt` when running `fix` where possible.

</Option>

## Advanced options

### `batch_size`

<Option
  cli_repr={`--fix-batch-size=<int>`}
  env_repr='PANTS_FIX_BATCH_SIZE'
  toml_repr={`[fix]
batch_size = <int>`}
  default_repr={`128`}
>

The target number of files to be included in each fixer batch.

Fixer processes are batched for a few reasons:

```
1. to avoid OS argument length limits (in processes which don't support argument files)
2. to support more stable cache keys than would be possible if all files were operated on in a single batch.
3. to allow for parallelism in fixer processes which don't have internal parallelism, or -- if they do support internal parallelism -- to improve scheduling behavior when multiple processes are competing for cores and so internal parallelism cannot be used perfectly.
```

In order to improve cache hit rates (see 2.), batches are created at stable boundaries, and so this value is only a "target" batch size (rather than an exact value).

</Option>

## Deprecated options

None

## Related subsystems

- [environments-preview](../subsystems/environments-preview.mdx)
- [filter](../subsystems/filter.mdx)

</span>
